Final History Code Ready For Review